syntax = "proto3";

option csharp_namespace = "CombinationWebApp.Protos";

import "Protos/user.proto";
import "Protos/common.proto";

service AccountService {
  rpc GetAll (Empty) returns (AccountList);
  rpc GetBySearch (AccountSearchRequest) returns (AccountList);
  rpc Save (AccountRequest) returns (AccountReply);
  rpc Update (AccountRequest) returns (AccountReply);
  rpc Remove (AccountRemoveRequest) returns (Empty);
}

message AccountList {
  repeated Account accounts = 1;
}

message AccountSearchRequest {
  string search_query = 1;
}

message AccountRequest {
  Account account = 1;
}

message AccountRemoveRequest {
  int32 account_id = 1;
}

message AccountReply {
  Account account = 1;
}
